fix: quote box overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 html, body, #root {
   width: 100%;
-  height: min(100%, min-content);
+  height: max(100%, min-content);
 }
 
 #wrapper {
